# elyan

./: .continues-handoff.md  .dockerignore  .editorconfig  .env  .env 2  .env 3  .env 4  .env.bak  .env.example  .gitignore  .npmignore  =2.0.0  AGENT.md  AGENTS.md  CAPABILITY_LIBRARY_MAP.md  CHANELLES.md  CHANNELS.md  CLAUDE.md  CODEX_PROMPT.md  CODE_OF_CONDUCT.md  COMPLETION_SUMMARY.txt  CONTRIBUTING.md  DECISIONS.md  DEPLOYMENT.md  Dockerfile  ELYAN_AGENT_CONSTITUTION.md  ELYAN_DEV_PROMPT.md  ELYAN_TURKCE_OZET.txt  EXTENSIONS.md  HANDOFF.md  INSTALLATION_GUIDE.txt  INVESTMENT_PITCH.txt  MCP_DEPLOYMENT.md  Makefile  OPENCLAW_RUNTIME_LEARNING_PLAN.txt  OPERATING_MODES.md  PHASE4_SESSION5_SUMMARY.md  PHASE5_SESSION1_SUMMARY.md  PHASE_5_DEVELOPMENT_PLAN.txt  PRICING.md  (+55 more)
.agents/: README.md
.claude/: settings.local.json
.elyan/: settings.json  task_brain.json  user_profiles.json
.githooks/: pre-commit
.github/: PULL_REQUEST_TEMPLATE.md
.wiqo/: artifact_quality.db  capability_metrics.db  learning_regression.db  pipeline_state.json  pricing_stats.json  settings.json  user_profiles.json
.wiqo_audit/: audit.db
Formula/: elyan.rb
_graveyard/: README.md  subscription_legacy.py
agents/: 00-orchestrator.md  01-planner-agent.md  02-ui-agent.md  03-builder-agent.md  04-reviewer-agent.md  05-release-ops-agent.md  06-memory-context-agent.md  PROJECT_STATE.md  README.md
api/: __init__.py  computer_use_api.py  computer_use_controlplane.py  dashboard_api.py  elyan_api.py  http_server.py  jarvis_api.py  privacy_api.py
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: main.rs
artifacts/: baseline_run.md  dead_code_inventory.json  dead_code_inventory.md
assets/: public.css
bot/: Dockerfile  install.sh  requirements.txt
capabilities/: __init__.py
cli/: daemon.py  main.py  onboard.py
config/: elyan_config.py  settings.py  settings_manager.py
contracts/: code_task.schema.json  file_task.schema.json  research_report.schema.json
core/: __init__.py  accuracy_speed_runtime.py  action_lock.py  adaptive_engine.py  adaptive_tuning.py  advanced_analytics.py  advanced_cache.py  advanced_checkpoints.py  advanced_features.py  advanced_nlu.py  advanced_task_decomposer.py  agent.py  agent_deadlock_detector.py  agent_integration_adapter.py  agent_loop.py  agent_orchestrator.py  agentic_loop.py  alerting.py  analytics_engine.py  api_gateway.py  api_rate_limiter.py  approval_history.py  artifact_quality_engine.py  artifact_retention.py  auto_patch.py  automation_engine.py  automation_registry.py  autonomous_coding_agent.py  autonomous_decision_engine.py  autonomy_policy.py  autopilot.py  away_mode.py  batch_processor.py  briefing_manager.py  capability_gating.py  capability_metrics.py  capability_router.py  cdg_engine.py  ceo_planner.py  channel_delivery.py  (+181 more)
docs/: CONSOLIDATION_ROADMAP.org  ELYAN_V2_ARCHITECTURE.md  README.md  agent-operating-manual.md  elyan-architecture-brief.md  elyan_agent_egitim_el_kitabi.md  index.html  index.md  multi-user-billing.md  orchestration_pipeline_refactor.md  pitch-deck.md  product-ux-principles.md  release-readiness-checklist.md  security-and-risk-policy.md
elyan/: __init__.py  bootstrap.py
elyan-video/: package-lock.json  package.json
handlers/: __init__.py  command_router.py  telegram_alerts_commands.py  telegram_browser_commands.py  telegram_email_commands.py  telegram_extensions.py  telegram_handler.py  telegram_proactive_commands.py  telegram_routines_commands.py  telegram_voice_commands.py  telegram_voice_handler.py
integrations/: __init__.py  auth.py  base.py  factory.py  registry.py  workflows.py
logs/: bot.jsonl
ops/: deploy-release.sh  (+4 more)
(+7691 files in other folders)
