[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "elyan"
dynamic = ["version"]
description = "Elyan AGI Framework — Autonomous, Omni-Platform, Zero-Trust AI Agent"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    {name = "Emre Koca"}
]
keywords = ["ai", "agent", "agi", "autonomous", "llm", "orchestrator"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    # Core
    "pydantic>=2.0.0",
    "httpx>=0.28.0",
    "python-dotenv>=1.0.0",
    "psutil>=5.9.0",
    "requests>=2.33.1",
    "aiohttp>=3.9.0",
    "json5>=0.9.0",
    # CLI
    "click>=8.1.0",
    "croniter>=2.0.0",
    # AI providers
    "groq>=0.11.0",
    "google-generativeai>=0.8.0",
    # Data / scraping
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "Pillow>=10.0.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.4.0",
    "sentence-transformers>=3.0.0",
    # Office
    "python-docx>=1.1.0",
    "openpyxl>=3.1.0",
    "pdfplumber>=0.10.0",
    "pypdf>=3.0.0",
    "python-pptx>=1.0.0",
    "reportlab>=4.0.0",
    # Scheduling
    "apscheduler>=3.10.0",
    "feedparser>=6.0.0",
    "watchdog>=3.0.0",
    # Security
    "cryptography>=42.0.0",
    "keyring>=25.0.0",
    "docker>=7.0.0",
    # DB
    "sqlalchemy>=2.0.0",
]

[project.optional-dependencies]
windows = ["pywin32>=306"]
linux = ["ewmh>=0.1.6"]
darwin = ["pyobjc-framework-Cocoa>=10.1", "rumps>=0.4.0"]
voice = ["pyttsx3>=2.90", "pydub>=0.25.0"]
telegram = ["python-telegram-bot>=22.0"]
discord = ["discord.py>=2.3.0"]
slack = ["slack-bolt>=1.18.0"]
ui = ["PyQt6>=6.6.0"]
docs = ["python-docx>=1.1.0", "openpyxl>=3.1.0", "pdfplumber>=0.10.0"]
browser = ["playwright>=1.40.0"]
research = ["numpy>=1.26.0", "scikit-learn>=1.4.0", "sentence-transformers>=3.0.0", "python-pptx>=1.0.0"]
nextgen = ["litellm>=1.61.0", "qdrant-client>=1.12.1"]
billing = ["stripe>=11.6.0"]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0", "bandit>=1.7.0"]
all = [
    "python-telegram-bot>=22.0",
    "discord.py>=2.3.0",
    "slack-bolt>=1.18.0",
    "PyQt6>=6.6.0",
    "python-docx>=1.1.0",
    "openpyxl>=3.1.0",
    "pdfplumber>=0.10.0",
    "python-pptx>=1.0.0",
    "litellm>=1.61.0",
    "qdrant-client>=1.12.1",
    "stripe>=11.6.0",
    "playwright>=1.40.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.4.0",
    "sentence-transformers>=3.0.0",
    "pyttsx3>=2.90",
    "pydub>=0.25.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "bandit>=1.7.0",
]

[project.scripts]
elyan = "elyan_entrypoint:main"

[project.urls]
Homepage = "https://github.com/emrek0ca/elyan"
Repository = "https://github.com/emrek0ca/elyan"
Documentation = "https://emrek0ca.github.io/elyan/"
Issues = "https://github.com/emrek0ca/elyan/issues"

[tool.setuptools]
py-modules = ["elyan_entrypoint"]

[tool.setuptools.dynamic]
version = {attr = "core.version.__version__"}

[tool.setuptools.packages.find]
include = ["core*", "tools*", "utils*", "config*", "cli*", "elyan*"]
