[package]
name = "elyan_desktop"
version = "0.1.0"
description = "Elyan premium desktop shell"
authors = ["Elyan"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }

[features]
default = []
